# MileStone2

./: Astar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  MatrixBuilder.cpp  MatrixBuilder.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  PairsMatrix.cpp  PairsMatrix.h  README.md  SearchSolverOA.h  Searcher.h  Server.h  Sockets.h  State.h  StatesMatrix.h  main.cpp
